--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 		<meta charset="utf-8">
 		<title>Phrase Hunter</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link href="css/styles.css" rel="stylesheet">
-		<link href="css/animate.css" rel="stylesheet">
+		<link href="style/main.css" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	</head>
 
